[gd_scene load_steps=4 format=3 uid="uid://bux4y1xgrr11o"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_w8gh3"]
[ext_resource type="Texture2D" uid="uid://daiwmgkhh014m" path="res://entities/player/player_sprite.png" id="2_xtvsy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ly33n"]
size = Vector2(9, 21)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_w8gh3")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_xtvsy")

[node name="PlayerArea" type="Area2D" parent="."]
visible = false

[node name="PlanetDetection" type="CollisionShape2D" parent="PlayerArea"]
visible = false
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_ly33n")

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_ly33n")

[node name="RayDown" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, 11)

[node name="gravity" type="RayCast2D" parent="."]
visible = false

[connection signal="area_entered" from="PlayerArea" to="." method="_on_player_area_area_entered"]
[connection signal="area_exited" from="PlayerArea" to="." method="_on_player_area_area_exited"]
